Ingress/AppGW4Container/alb-template.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: alb-test-infra
